// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'comment - multi line comment' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<!--
<template>
  <div>
    <div class="lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit eu posuere">
      <slot></slot>
    </div>
  </div>
</template>
-->
"
`;

exports[`'endOfLine: crlf' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
  <div>
    <div
      class="lorem ipsum dolor sit amet consectetur
        adipiscing elit proin ex massa hendrerit eu posuere"
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'plugin options - custom attributes' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
  <div>
    <div
      fixme="lorem ipsum dolor sit amet consectetur
        adipiscing elit proin ex massa hendrerit eu posuere"
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'tabWidth: 4' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
    <div>
        <div
            class="lorem ipsum dolor sit amet consectetur
                adipiscing elit proin ex massa hendrerit eu
                posuere"
        >
            <slot></slot>
        </div>
    </div>
</template>
"
`;

exports[`'useTabs: true (1) - tabWidth: 2' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
	<div>
		<div
			class="lorem ipsum dolor sit amet consectetur
				adipiscing elit proin ex massa hendrerit eu posuere"
		>
			<slot></slot>
		</div>
	</div>
</template>
"
`;

exports[`'useTabs: true (2) - tabWidth: 4' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
	<div>
		<div
			class="lorem ipsum dolor sit amet consectetur
				adipiscing elit proin ex massa hendrerit eu
				posuere"
		>
			<slot></slot>
		</div>
	</div>
</template>
"
`;

exports[`'useTabs: true (3) - tabWidth: 8' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<template>
	<div>
		<div
			class="lorem ipsum dolor sit amet
				consectetur adipiscing elit
				proin ex massa hendrerit eu
				posuere"
		>
			<slot></slot>
		</div>
	</div>
</template>
"
`;
